@@ -1,0 +1,33 @@
+/*
+  Copyright 2011 David Robillard <http://drobilla.net>
+
+  Permission to use, copy, modify, and/or distribute this software for any
+  purpose with or without fee is hereby granted, provided that the above
+  copyright notice and this permission notice appear in all copies.
+
+  THIS SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+  WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+  MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+  ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+  WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+  ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+  OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+*/
+
+#include "serd_internal.h"
+
+SERD_API
+const uint8_t*
+serd_strerror(SerdStatus st)
+{
+	switch (st) {
+	case SERD_SUCCESS:        return (const uint8_t*)"Success";
+	case SERD_FAILURE:        return (const uint8_t*)"Non-fatal failure";
+	case SERD_ERR_UNKNOWN:    return (const uint8_t*)"Unknown error";
+	case SERD_ERR_BAD_SYNTAX: return (const uint8_t*)"Invalid syntax";
+	case SERD_ERR_BAD_ARG:    return (const uint8_t*)"Invalid argument";
+	case SERD_ERR_NOT_FOUND:  return (const uint8_t*)"Not found";
+	}
+	return (const uint8_t*)"Success";  // never reached
+}
+
