@@ -9,7 +9,7 @@ from waflib.extras import autowaf as autowaf
 import waflib.Logs as Logs, waflib.Options as Options
 
 # Version of this package (even if built as a child)
-SERD_VERSION       = '0.4.3'
+SERD_VERSION       = '0.4.5'
 SERD_MAJOR_VERSION = '0'
 
 # Library version (UNIX style major, minor, micro)
@@ -74,6 +74,7 @@ def build(bld):
 
     lib_source = '''
             src/env.c
+            src/error.c
             src/node.c
             src/reader.c
             src/uri.c
